# bio-transfer

./: .gitignore  README.md  data_utils.py  gnn_model.py  jedrzej_preprocessing.ipynb  preprocessing.py  pyproject.toml  train_gnn.py
configs/upstream/: train.yaml
notebooks/: dataset_eval.ipynb  jedrzej_preprocessing.ipynb  overlap.ipynb  target_analysis.ipynb
scripts/: fetch_target_sequences.py  generate_downstream_dataset.py  generate_upstream_dataset.py  test.py  train_upstream_gnn.py
scripts-athena/: create_venv.sh  train_classic.sh  train_gnn.sh
src/: classic_utils.py  train_classic.py  train_gnn.py
src/data/: config.py  downloading.py  gnn_dataset.py  processing.py
src/model/: esm_target_embedder.py  multi_target_gnn.py
src/upstream/: eval.py  train.py
summary/: downstream.txt
